# anime-over-ansi

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile.cuda  README.md  build_cuda.sh  build_docker.sh  color_diff.cr  dither.cr  encode.cr  filter_subtitles.py  index.html  server.cr  shard.yml  spec.html  spec.md
anime_lib/: Cargo.toml
anime_lib/benches/: cie76_delta_e.rs  cie94_delta_e.rs  delta_e.rs
anime_lib/cuda/: pattern-dither.cu
anime_lib/src/: color_calc.rs  cuda.rs  encoding.rs  err.rs  lib.rs  metadata.rs  palette.rs  pattern.rs  player.rs  subtitles.rs
anime_lib/src/color_calc/: cie76.rs  cie94.rs  mod.rs
colorful/: Cargo.toml
colorful/src/: lib.rs  palette.rs  pattern_dithering.rs
colorful/src/delta/: jab.rs  mod.rs
container/: Cargo.toml
container/src/: codec.rs  lib.rs  metadata.rs  packet.rs
encoder/: Cargo.toml  build.rs
encoder/src/: cli.rs  cuda.rs  ffmpeg.rs  lib.rs  pre_processor.rs  tool_utils.rs  video_encoder.rs
gpu/: Cargo.toml
gpu/src/: lib.rs  palette.rs
img2ansi/: Cargo.toml
img2ansi/src/: lib.rs
play/: Cargo.toml
play/src/: codec.rs  lib.rs  midi.rs  player.rs  subtitles.rs
player/: Cargo.toml
player/src/: lib.rs  play.rs  playing.rs  server.rs  subtitles.rs
src/: color_calc.rs  encoding.rs  lib.rs  metadata.rs  palette.rs  player.rs
tools/: Cargo.toml
tools/src/: codec.rs  lib.rs  midi.rs  player.rs  subtitles.rs
