[package]
name = "anime_telnet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
image = "0.23.14"
clap = "2.33.3"
srtlib = "0.1"
opencv = "0.53.0"
subparse = "0.7.0"
tempfile = "3.2.0"
zstd = "0.9"
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[[bin]]
name = "player"
path = "src/bin/play.rs"

[[bin]]
name = "encoder"
path = "src/bin/encoder.rs"
