[package]
name = "anime_telnet"
version = "0.1.0"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
subparse = "0.7.0"
zstd = "0.9"
fast_image_resize = "0.4.0"
lab = "0.11.0"
derive_builder = "0.10.2"
simd-adler32 = "0.3.4"

[dependencies.argmm]
git = "https://github.com/alisww/argmm"

[dependencies.image]
version = "0.23.14"
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.4"

[[bench]]
name = "delta_e"
harness = false