[package]
name = "colorful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmm = { git = "https://github.com/emily-signet/argmm", version = "0.1.2" }
image = { version = "0.23", default-features = false }
kasi-kule = { git = "https://github.com/emily-signet/kasi-kule", features = ["sse"] }
lab = "0.11.0"
lazy_static = "1.4.0"
rayon = "1.5.3"
arrayvec = "0.7.2"
num_enum = "0.5.7"
