[package]
name = "container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["codec"]
codec = ["tokio-util", "bytes"]

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
derive_builder = "0.11.2"
crc32fast = "1.3.2"
rend = "0.3.6"
enumflags2 = "0.7.5"
num_enum = "0.5.7"
arrayvec = "0.7.2"

[dependencies.tokio-util]
version = "0.7.3"
default-features = false
features = ["codec"]
optional = true

[dependencies.bytes]
version = "1.2.1"
optional = true

