[package]
name = "encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ac-ffmpeg = { git = "https://github.com/emily-signet/rust-ac-ffmpeg", version = "0.17.3" }
img2ansi = { path = "../img2ansi" }
container = { path = "../container", features = ["codec"] }
image = { version = "0.23", default-features = false, features = ["rgb"] }
enumflags2 = "0.7.5"
colorful = { path = "../colorful" }
crossbeam-channel = "0.5.5"
tokio = { version = "1.21", features = ["rt-multi-thread", "io-util", "fs", "macros", "sync", "io-std"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = { version = "0.3" }
tokio-stream = "0.1.9"
postage = "0.5.0"
# eframe = { version = "0.17.0", optional = true }
rfd = { version = "0.9.1", optional = true }
bytes = "1.2.1"
rmp-serde = "1.1.0"
dialoguer = "0.10.1"
clap = "2.34"
num_enum = "0.5.7"
zstd = { version = "0.11.2", features = ["experimental"], optional = true }
player = { path = "../player" }
cust = { version = "0.3.2", optional = true }
ouroboros = "0.15.5"

[build-dependencies]
cuda_builder = { version = "0.3.0", optional = true }

[features]
default = ["compression"]
gui = ["rfd"]
compression = ["zstd"]
cuda = ["cust", "cuda_builder"]

# [[bin]]
# name = "gui"
# required-features = ["gui"]

[dependencies.substation]
git = "https://github.com/emily-signet/substation.git"
