[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
container = { path = "../container", features = ["codec"] }
enumflags2 = "0.7.5"
tokio = { version = "1.21", features = ["rt-multi-thread", "io-util", "fs", "macros", "sync", "io-std"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = { version = "0.3" }
tokio-stream = "0.1.9"
postage = "0.5.0"
eframe = { version = "0.18.0", optional = true }
rfd = { version = "0.9.1", optional = true }
bytes = "1.2.1"
rmp-serde = "1.1.0"
dialoguer = "0.10.1"
clap = "2.34"
num_enum = "0.5.7"
zstd = { version = "0.11.2", features = ["experimental"], optional = true }

[dependencies.substation]
git = "https://github.com/emily-signet/substation.git"

[features]
default = ["compression"]
compression = ["zstd"]
