[package]
name = "anime_telnet_encoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = "2.33.3"
tempfile = "3.2.0"
zstd = "0.9"
indicatif = "0.17.0-beta.1"
fast_image_resize = "0.4.0"
dialoguer = "0.9"
futures = "0.3"
bytes = "1.1.0"
rmp-serde = "0.15.5"
async-broadcast = "0.3.4"
simd-adler32 = "0.3.4"

[dependencies.image]
version = "0.23.14"
default-features = false

[dependencies.tokio]
version = "1.13"
features = ["io-std","net","time","macros","io-util","fs","rt-multi-thread"]

[dependencies.tokio-util]
version = "0.6.9"
features = ["codec"]

[dependencies.cyanotype]
git = "https://github.com/alisww/cyanotype.git"

[dependencies.ac-ffmpeg]
git = "https://github.com/alisww/rust-ac-ffmpeg.git"

[dependencies.anime_telnet]
path = "../anime_lib"

[dependencies.substation]
git = "https://github.com/alisww/substation.git"

[dependencies.subrip]
git = "https://github.com/alisww/substation.git"

[dependencies.serde]
version = "1"
features = ["derive"]

[[bin]]
name = "encoder"
path = "src/bin/encoder.rs"

